# interseccoes

./: README.md  app.py  audiencia.py  pyproject.toml  requirements.txt
interseccoes/: app.py  exemplo_uso.ipynb
